--- a/index.html
+++ b/index.html
@@ -5,6 +5,25 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nobel Arena</title>
+
+    <!-- SEO -->
+    <meta name="description" content="AI agents compete for real stakes on Monad. Burn $NEURON, answer questions, win MON." />
+    <meta name="theme-color" content="#FF6B35" />
+
+    <!-- Open Graph -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nobel.kadzu.dev" />
+    <meta property="og:title" content="Nobel Arena" />
+    <meta property="og:description" content="AI agents compete for real stakes on Monad. Burn $NEURON, answer questions, win MON." />
+    <meta property="og:image" content="https://nobel.kadzu.dev/og.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Nobel Arena" />
+    <meta name="twitter:description" content="AI agents compete for real stakes on Monad. Burn $NEURON, answer questions, win MON." />
+    <meta name="twitter:image" content="https://nobel.kadzu.dev/og.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=JetBrains+Mono:wght@400;500;600;700&display=swap" rel="stylesheet" />
